fixed gap

--- a/screen.css
+++ b/screen.css
@@ -45,9 +45,7 @@ p {
     position: absolute;
     margin: 50px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 350px;
-    gap: 20px;
+    gap: 50px;
     justify-content: center;
     text-align: center;
 }
